nivasa-macros/tests/trybuild/controller_roles_empty.stderr
error: `#[roles]` requires at least one role name
 --> tests/trybuild/controller_roles_empty.rs:3:1
  |
3 | #[roles()]
  | ^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `roles` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `controller`
 --> tests/trybuild/controller_roles_empty.rs:1:21
  |
1 | use nivasa_macros::{controller, roles};
  |                     ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
