nivasa-macros/tests/trybuild/controller_roles_empty.rs
use nivasa_macros::{controller, roles};

#[roles()]
#[controller("/users")]
struct UsersController;

fn main() {}
